<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <docker.image.prefix>opendes</docker.image.prefix>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <os-core-common.version>0.27.0-rc1</os-core-common.version>
        <snakeyaml.version>2.0</snakeyaml.version>
        <resilience4jVersion>1.7.0</resilience4jVersion>
        <openapi.version>1.6.14</openapi.version>
        <json-smart.version>2.5.0</json-smart.version>
        <jackson.version>2.16.1</jackson.version>
        <spring-framework-version>6.1.13</spring-framework-version>
        <spring-boot.version> 3.3.1</spring-boot.version>
        <spring-security.version>6.3.1</spring-security.version>
    </properties>

    <licenses>
    	<license>
    		<name>Apache License, Version 2.0</name>
    		<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    		<distribution>repo</distribution>
    	</license>
    </licenses>

    <groupId>org.opengroup.osdu.legal</groupId>
    <artifactId>legal-service</artifactId>
    <version>0.28.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>legal-service</name>
    <description>Legal service</description>

    <modules>
        <module>legal-core</module>
        <module>legal-core-plus</module>
        <module>provider/legal-gc</module>
        <module>provider/legal-azure</module>
        <module>provider/legal-aws</module>
        <module>provider/legal-ibm</module>
    </modules>

    <repositories>
        <repository>
            <id>${repo.releases.id}</id>
            <url>${repo.releases.url}</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>${publish.releases.id}</id>
            <url>${publish.releases.url}</url>
        </repository>
        <snapshotRepository>
            <id>${publish.snapshots.id}</id>
            <url>${publish.snapshots.url}</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.10.1</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${spring-framework-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-bom</artifactId>
                <version>${spring-security.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.opengroup.osdu</groupId>
                <artifactId>os-core-common-spring6</artifactId>
                <version>${os-core-common.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.opengroup.osdu</groupId>
                <artifactId>os-core-common-spring6</artifactId>
                <version>${os-core-common.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.elasticsearch</groupId>
                        <artifactId>elasticsearch</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.elasticsearch.client</groupId>
                        <artifactId>elasticsearch-rest-client</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.elasticsearch.client</groupId>
                        <artifactId>elasticsearch-rest-high-level-client</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!--explicitly load latest compatible version with security fix in it-->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>json-smart</artifactId>
                <version>${json-smart.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>1.9.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

		<dependencies>
		    <!--Swagger-->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.3.0</version>
        </dependency>
		</dependencies>
    <profiles>
        <profile>
            <id>Default</id>
            <activation>
                <property>
                    <name>!repo.releases.id</name>
                </property>
            </activation>
            <properties>
                <repo.releases.id>community-maven-repo</repo.releases.id>
                <publish.snapshots.id>community-maven-via-job-token</publish.snapshots.id>
                <publish.releases.id>community-maven-via-job-token</publish.releases.id>
                <repo.releases.url>https://community.opengroup.org/api/v4/groups/17/-/packages/maven</repo.releases.url>
                <publish.snapshots.url>https://community.opengroup.org/api/v4/projects/74/packages/maven</publish.snapshots.url>
                <publish.releases.url>https://community.opengroup.org/api/v4/projects/74/packages/maven</publish.releases.url>
            </properties>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.2.2</version>
                    <executions>
                        <execution>
                            <id>build-info</id>
                            <goals>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>8.0.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <verbose>true</verbose>
                    <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>
                        ${project.build.outputDirectory}/git.properties
                    </generateGitPropertiesFilename>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
